--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<button mat-button>
-  <mat-icon>face</mat-icon>
-  Click me!
-</button>
-
-<mat-checkbox>Check me!</mat-checkbox>
+<router-outlet></router-outlet>
+<!-- <app-contactmanager-app></app-contactmanager-app> -->
