Aligned with Tatchi

--- a/src/app/contactmanager/components/toolbar/toolbar.component.html
+++ b/src/app/contactmanager/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="Primary">
-  <button mat-icon-button color="white" >
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>Test</span>
+<mat-toolbar color="primary">
+    <button mat-button class="sidenav-toggle" (click)="toggleSidenav.emit()">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>Contact Manager</span>
 </mat-toolbar>
