--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,23 +1,24 @@
 <mat-sidenav-container class="app-sidenav-container">
-  <app-toolbar></app-toolbar>
-  <router-outlet></router-outlet>
-  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10"
-                [opened]="isScreenSmall"
-                [mode]="isScreenSmall ? 'side' : 'over'"
-  >
-    <mat-toolbar color="Primary">
-      <span>Contacts</span>
-    </mat-toolbar>
-    <mat-list role="list">
-      <mat-list-item role="listitem">Item 1</mat-list-item>
-      <mat-list-item role="listitem">Item 2</mat-list-item>
-      <mat-list-item role="listitem">Item 3</mat-list-item>
-    </mat-list>
-  </mat-sidenav>
+  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10  "
+                  [opened]="!isScreenSmall"
+                  [mode]="isScreenSmall ? 'over' : 'side'">
+    <mat-toolbar color="primary">Contacts</mat-toolbar>
 
+    <mat-nav-list>
+      <mat-list-item *ngFor="let user of users | async">
+        <a matLine [routerLink]="['/contactmanager', user.id]">
+          <mat-icon svgIcon="{{user.avatar}}"></mat-icon>
+          {{user.name}}
+        </a>
+      </mat-list-item>
+    </mat-nav-list>
+
+  </mat-sidenav>
   <div class="app-sidenav-content">
-    <button type="button" mat-button (click)="sidenav.toggle()">
-      Toggle sidenav
-    </button>
+    <app-toolbar (toggleSidenav)="sidenav.toggle()"></app-toolbar>
+    <div class="wrapper">  
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </mat-sidenav-container>
+  
