--- a/src/app/contactmanager/components/sidenav/sidenav.component.scss
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.scss
@@ -1,20 +1,22 @@
 .app-sidenav-container {
-  flex: 1;
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-  min-height: 100%;
-  // border: 1px solid rgba(0, 0, 0, 0.5);
-}
+    flex: 1;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
+  }
+  
+  .app-sidenav-content {
+    display: flex;
+    height: 100%;
 
-.app-sidenav-content {
-  display: flex;
-  height: 100%;
-  // align-items: center;
-  // justify-content: center;
-  flex-direction: column;
-}
+    flex-direction: column;
+  }
+  
+  .app-sidenav {
+    width: 240px;
+  }
 
-.app-sidenav {
-  width: 250px;
-}
+  .wrapper {
+    margin: 40px;
+  }
